--- a/.gitignore
+++ b/.gitignore
@@ -32,3 +32,9 @@ override.tf.json
 # Ignore CLI configuration files
 .terraformrc
 terraform.rc
+
+
+# Ignore Visual Studio Code settings
+.vscode/*
+.DS_Store
+**/.DS_Store
