--- a/pipeline/Jenkinsfile
+++ b/pipeline/Jenkinsfile
@@ -1,4 +1,12 @@
 pipeline {
+
+    parameters {
+        string(name: 'AWS_REGION', description: 'AWS Region', defaultValue: 'us-east-1', trim: true)
+        string(name: 'ENVIRONMENT', description: 'Environment (dev, staging, prod)', defaultValue: 'dev', trim: true)
+    }
+
+
+
     agent any
     
     stages {
@@ -41,7 +49,13 @@ pipeline {
         stage('Deploying Helm Chart on EKS') {
             steps {
                 script {
-                    sh 'aws eks update-kubeconfig --name dev-us-east-1-eks-cluster --region us-east-1'
+                    def awsRegion = params.AWS_REGION
+                    def environment = params.ENVIRONMENT
+                    withCredentials([string(credentialsId: '${environment}_role_account', variable: 'role_account_id')]) {
+                    withAWS(roleAccount:'role_account_id', role:'${environment}Role', region:'${awsRegion}') {
+                    sh 'aws eks update-kubeconfig --name ${environment}-${awsRegion}-eks-cluster'
+                    }
+                    }
                     def releaseExists = sh(script: "helm list -q | grep mars-rover-fleet-management", returnStatus: true) == 0
 
                     if (releaseExists) {
