--- a/helm/templates/service.yaml
+++ b/helm/templates/service.yaml
@@ -1,15 +1,16 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: {{ include "mars-rover-fleet-tracker.fullname" . }}
+  name: {{ include "mars-rover-fleet-tracker.name" . }}
   labels:
     {{- include "mars-rover-fleet-tracker.labels" . | nindent 4 }}
+    prometheus: {{ .Values.service.prometheus }}
 spec:
   type: {{ .Values.service.type }}
   ports:
     - name: web
       port: {{ .Values.service.port }}
       protocol: TCP
-      targetPort: http
+      targetPort: 3000
   selector:
     {{- include "mars-rover-fleet-tracker.selectorLabels" . | nindent 4 }}
