--- a/helm/values.yaml
+++ b/helm/values.yaml
@@ -9,6 +9,7 @@ image:
   pullPolicy: Always
   tag: "latest"
 
+
 imagePullSecrets: []
 nameOverride: ""
 fullnameOverride: ""
@@ -20,10 +21,15 @@ podSecurityContext: {}
 securityContext: {}
 
 service:
-  name: mars-rover-fleet-tracker
+  name: mars-service
   type: ClusterIP
   port: 3000
   targetPort: 3000
+
+
+monitoring:
+  prometheus: prometheus
+  interval: 30s
 
 tls: []
 
